--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="about.html">Tentang</a>
       <a href="gallery.html">Galeri</a>
       <a href="contact.html">Kontak</a>
-    </nav>
+  <img src="https://example.com/foto-lensa.jpg" alt="Lensa Media" />  </nav>
   </header>
   <main class="fade-in">
     <section>
